[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-logic"
version = "0.1.0"
description = "Chess engine"
authors = [{ name="mmolebny" }]
requires-python = ">=3.9"

dependencies = ["pygame>=2.5.0"]

[tool.setuptools]
packages = ["Chess"]# test
